--- a/TechTalentBlog/src/main/resources/application.properties
+++ b/TechTalentBlog/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.h2.console.enabled=true
 
 spring.h2.console.path=/console
-spring.datasource.url=jdbc:h2:mem:~/data/blog
+spring.datasource.url=jdbc:h2:~/data/blogs
 
 spring.datasource.platform=h2 
 spring.jpa.hibernate.ddl-auto=update
